changed request to Gemini with classes serialization